WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98493
[EFL][WK2] Fix mktemp() compilation warning in Minibrowser
https://bugs.webkit.org/show_bug.cgi?id=98493
Summary
[EFL][WK2] Fix mktemp() compilation warning in Minibrowser
Chris Dumez
Reported
2012-10-05 00:56:07 PDT
We have the following compilation warning in Minibrowser: Building C object Tools/MiniBrowser/efl/CMakeFiles/MiniBrowser.dir/main.c.o /home/chris/unencrypted/WebKit/Tools/MiniBrowser/efl/main.c: In function ‘on_download_request’: /home/chris/unencrypted/WebKit/Tools/MiniBrowser/efl/main.c:216:9: warning: passing argument 1 of ‘mktemp’ discards ‘const’ qualifier from pointer target type [enabled by default]
Attachments
Patch
(1.88 KB, patch)
2012-10-05 00:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-05 00:59:29 PDT
Created
attachment 167273
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-05 09:29:59 PDT
Comment on
attachment 167273
[details]
Patch Clearing flags on attachment: 167273 Committed
r130517
: <
http://trac.webkit.org/changeset/130517
>
WebKit Review Bot
Comment 3
2012-10-05 09:30:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug