[EFL][WK2] Fix mktemp() compilation warning in Minibrowser https://bugs.webkit.org/show_bug.cgi?id=98493

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-05
Reviewed by Kenneth Rohde Christiansen.

Fix wrong mktemp usage causing a compilation warning
in MiniBrowser.

* MiniBrowser/efl/main.c:
(on_download_request):

Canonical link: https://commits.webkit.org/116508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130517 268f45cc-cd09-0410-ab3c-d52691b4dbfc